[tool.poetry]
name = "planpro-exporter"
version = "2.0"
description = ""
authors = ["OSM at HPI <arne.boockmeyer@hpi.de>"]
readme = "README.md"
packages = [{include = "planproexporter"}]

[tool.poetry.dependencies]
python = "^3.11"
yaramo = {git = "https://github.com/simulate-digital-rail/yaramo", tag = "v1.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
